<resources>
    <string name="app_name">MovieApp</string>
    <string name="movie_list_label">Фильмы</string>
    <string name="movie_details_label">Страница фильма</string>
    <string name="user_page_label">Страница пользователя</string>

    <string name="paging_text">Страница %d из %d</string>
    <string name="next_page_text">Следующая страница</string>
    <string name="previous_page_text">Предыдущая страница</string>
    <string name="cancel_search_text">Отмена</string>
    <string name="search_text">Поиск: %s</string>
    <string name="search_view_placeholder">Поиск фильма</string>
    <string name="movie_desc_example">Кобб – талантливый вор, лучший из лучших в опасном искусстве извлечения: он крадет ценные секреты из глубин подсознания во время сна, когда человеческий разум наиболее уязвим. Редкие способности Кобба сделали его ценным игроком в привычном к предательству мире промышленного шпионажа, но они же превратили его в извечного беглеца и лишили всего, что он когда-либо любил.\nИ вот у Кобба появляется шанс исправить ошибки. Его последнее дело может вернуть все назад, но для этого ему нужно совершить невозможное – инициацию. Вместо идеальной кражи Кобб и его команда спецов должны будут провернуть обратное. Теперь их задача – не украсть идею, а внедрить ее. Если у них получится, это и станет идеальным преступлением.\nНо никакое планирование или мастерство не могут подготовить команду к встрече с опасным противником, который, кажется, предугадывает каждый их ход. Врагом, увидеть которого мог бы лишь Кобб.</string>
    <string name="movie_description_label">Описание</string>
    <string name="movie_genres">Жанры: %s</string>
    <string name="movie_release_date">Дата выхода: %s</string>
    <string name="movie_duration">Продолжительность: %d мин.</string>
    <string name="movie_pg_info">Возрастное ограничение: %s</string>
    <string name="actors_label">Актеры</string>

    <string name="movies_tab_label">Фильмы</string>
    <string name="users_tab_label">Вы</string>


    <string name="auth_button">Войти</string>
    <string name="registration_button">Зарегистрироваться</string>
    <string name="auth_choose_text">Чтобы расширить функционал приложения необходимо войти в свой аккаунт</string>
    <string name="auth_label">Вход</string>
    <string name="login_field_hint">Логин</string>
    <string name="password_field_hint">Пароль</string>
    <string name="field_is_required">Это поле обязательно</string>
    <string name="invalid_email">Неправильный email</string>
    <string name="field_must_be_more_then">Значение должно быть не короче %d символов</string>
    <string name="log_out_button">Выйти</string>
    <string name="is_admin_check_box_text">Админ</string>
    <string name="log_out_dialog_message">Вы действительно хотите выйти из аккаунта?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="email_field_hint">Email</string>
    <string name="repeat_password_field_hint">Повторите пароль</string>
    <string name="passwors_not_same">Пароли не совпадают</string>
    <string name="user_created_message">Пользователь создан успешно!</string>
</resources>